        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=10734
        Made HTMLOptionElement.index read-only, matching IE and DOM standard.

        Test: fast/dom/HTMLOptionElement/set-option-index-text.html

        * html/HTMLOptionElement.idl: Marked index as readonly.

        * html/HTMLOptionElement.cpp:
        * html/HTMLOptionElement.h:
        Removed setIndex().



git-svn-id: svn://svn.chromium.org/blink/trunk@27217 bbb929c8-8fbe-4397-9dbb-9b2b20218538