third_party/WebKit/WebCore/html/HTMLOptionElement.cpp
@@ -148,12 +148,6 @@ int HTMLOptionElement::index() const
     return 0;
 }
 
-void HTMLOptionElement::setIndex(int, ExceptionCode& ec)
-{
-    ec = NO_MODIFICATION_ALLOWED_ERR;
-    // ###
-}
-
 void HTMLOptionElement::parseMappedAttribute(MappedAttribute *attr)
 {
     if (attr->name() == selectedAttr)
