third_party/WebKit/WebCore/html/HTMLOptionElement.h
@@ -58,7 +58,6 @@ public:
     void setText(const String&, ExceptionCode&);
 
     int index() const;
-    void setIndex(int, ExceptionCode&);
     virtual void parseMappedAttribute(MappedAttribute*);
 
     String value() const;
